--- a/Python/GCP/storage/requirements.txt
+++ b/Python/GCP/storage/requirements.txt
@@ -1,2 +1,3 @@
-# Function dependencies, for example:
-# package>=version
+# Function dependencies:
+-i https://test.pypi.org/simple/
+cloudagnosticfass==0.0.1
