--- a/Python/GCP/storage/requirements.txt
+++ b/Python/GCP/storage/requirements.txt
@@ -1,3 +1,11 @@
 # Function dependencies:
--i https://test.pypi.org/simple/
-cloudagnosticfass==0.0.3
+cloudagnosticfass==0.0.9
+
+google-api-core
+google-auth
+google-cloud
+google-cloud-core
+google-cloud-storage
+google-cloud
+google-resumable-media
+deepsource
